--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
              <li>Solve the algae crisis, and the pollution crises that are causing it.</li>
              <li>Protect our children, women and men from harm, including from harmful advertising like gambling adverts, and from unfair treatment. Within the limits of our political system, I'll do what I can to protect all individuals from injustice.</li>
             </ul>
-            <p>Big claims? Yes. But at least a I have a plan. At least I'm going to try.</p>
+            <p>Big claims? Yes. But at least I have a plan. At least I'm going to try.</p>
             <p>Sometimes it seems like most of our politicians and political parties aren't even trying. They prefer to play around the edges of our problems; throw a lot of money at problems without solving their causes; or choose policies that mitigate some problems while making other problems worse. Sometimes they choose a hopeless political strategy to boot, and for almost all political parties it's a divisive strategy.</p>
             <p>My plan involves more comprehensive policies than those of the other parties, more respect for the whole community, and at the same time my plan includes a pragmatic strategy to support a political movement beyond our own electorate here in Waite, and beyond state politics, to influence politics at the federal and international levels. We need better policies and we need a better way of doing politics, and if I'm elected I'll use the platform of state parliament to do my part in both.</p>
             <p>
