--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="cta-buttons">
                     <a href="#policy" class="btn btn-primary">My Policies</a>
-                    <a href="#contact" class="btn btn-secondary">Get Involved</a>
+                    <a href="#contact" class="btn btn-secondary">Get in touch</a>
                 </div>
             </div>
         </section>
@@ -297,7 +297,7 @@ body.dark-theme .site-header {
 .intro-content-box {
     background-image: url('images/alec_gargett_adelaide_oval_torrens_river_202303_cropped.jpg');
     background-size: cover;
-    background-position: center 25%;
+    background-position: right 25%;
     padding: 60px 20px;
     border-radius: 8px;
     box-shadow: var(--box-shadow);
