--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
         <section id="policy" class="content-section responsive-width">
              <h2>My policies</h2>
              <p>Policy details will be progressively published here and on other platforms like Facebook, Youtube and Instagram between now and the election in March next year.</p>
-             <article>
+<!--              <article>
              <h3>Solving the underemployment crisis</h3>
               <p>
                The official (low hours) underemployment rate is 5.9%, but the real underemployment rate may be well over 20%. 5.9% is only the number of employed Australians who are working less hours than they would like to. It doesn't include the 4.5% percent of unemployed Australians who are seeking a job, which makes a total of more than 10% of Australians who are underemployed in terms of hours. The official figure of 5.9% also doesn't include the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skills and knowledge are not being put to best use, meaning that the true underemployment rate, in the broader sense, may be well over 20%.
-             </article>
+             </article> -->
         </section>
         <section id="beyondpolicy" class="content-section responsive-width">
          <h2>Beyond policy</h2>
