--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="#home">Home</a>
                 <a href="#plan">My plan</a>
                 <a href="#policy">My policies</a>
-                <a href="#about">About</a>
+                <!-- <a href="#about">About</a> -->
                 <a href="#contact">Contact</a>
             </nav>
             <button id="theme-toggle-button" onclick="toggleTheme()">Toggle Theme</button>
@@ -68,21 +68,21 @@
                     <a href="#plan" class="btn btn-primary">My plan</a>
                     <a href="#policy" class="btn btn-primary">My policies</a>
                     <a href="#beyondpolicy" class="btn btn-primary">Beyond policy</a>
-                    <a href="#about" class="btn btn-primary">About me</a>
+                    <!-- <a href="#about" class="btn btn-primary">About me</a> -->
                     <a href="#contact" class="btn btn-secondary">Get in touch</a>
                 </div>
             </div>
         </section>
 
-        <section id="about" class="content-section responsive-width">
+        <section id="plan" class="content-section responsive-width">
             <h2>My plan</h2>
             <p>Hi. I'm Alec Gargett and I have a plan.</p>
-            <p>It's a plan to</p>
+            <p>My plan aims to:</p>
             <ul>
              <li>Solve the cost of living crisis while protecting and improving our quality of life, our environment, the beauty of our city and our suburbs, and our public services.</li>
              <li>Solve the algae crisis, and the pollution crises that are causing it.</li>
              <li>Solve the health care crisis, including the ramping crisis.</li>
-             <li>Solve the underemployment crisis (which is a bigger crisis than ackowledged by official statistics, explained below).</li>
+             <li>Solve the underemployment crisis. Ensure that every Australian is supported to make the best use of their skill, talent and knowledge.</li>
              <li>Protect our children, women and men from harm, including from harmful advertising like gambling adverts, and from unfair treatment. Within the limits of our political system, I'll do what I can to protect all individuals from injustice.</li>
              <li>Fight for integrity in politics, transparency and accountability in government and a stronger democracy, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations.</li>
             </ul>
@@ -104,20 +104,20 @@
 <!--              <article>
              <h3>Solving the underemployment crisis</h3>
               <p>
-               The official (low hours) underemployment rate is 5.9%, but the real underemployment rate may be well over 20%. 5.9% is only the number of employed Australians who are working less hours than they would like to. It doesn't include the 4.5% percent of unemployed Australians who are seeking a job, which makes a total of more than 10% of Australians who are underemployed in terms of hours. The official figure of 5.9% also doesn't include the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skills and knowledge are not being put to best use, meaning that the true underemployment rate, in the broader sense, may be well over 20%.
+               The official (low hours) underemployment rate is 5.9%, but the real underemployment rate may be well over 20%. 5.9% is only the number of employed Australians who are working fewer hours than they would like to. It doesn't include the 4.5% of unemployed Australians who are seeking a job, which makes a total of more than 10% of Australians who are underemployed in terms of hours. Even this combined figure doesn't include all of the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skill and knowledge are not being put to best use, meaning that the true underemployment rate, in the broader sense, may be well over 20%.
+              </p>
              </article> -->
         </section>
         <section id="beyondpolicy" class="content-section responsive-width">
          <h2>Beyond policy</h2>
-          <p>By itself, even the most comprehensive set of policies is not a complete solution without a viable strategy. To get these policies implemented, we need to build a political movement that will be taken seriously by the government, and become a part of government.
-          We also need to address what is fundmentally broken in our major parties. If the major parties cannot be fixed, they need to be replaced, by independents, and if necessary by new political parties, that are designed to hold politicians accountable to their electorates, rather than pushing some other agenda of the party or its donors.
+          <p>By itself, even the most comprehensive set of policies is not a complete solution without a viable strategy. To get good policies implemented, we need to build a political movement that will be taken seriously by the government, and become a part of government.
+          We also need to address what is fundamentally broken in our major parties. If a major party cannot be fixed, it needs to be replaced, by independents, and if necessary by new political parties, that are designed to hold politicians accountable to their electorates, rather than pushing some other agenda of the party or its donors.
           </p>
-          <p>If I'm elected, I won't be resigned to what I can do within state parliament to influence state policy as a single member. I will use the platform of state parliament to support the movement towards a better democracy, which will influence both the state and federal government to do better.
+          <p>If I'm elected, I won't be resigned to what I can do within state parliament to influence state policy as a single member. I will use the platform of state parliament to support the movement toward a better democracy, which will influence both the state and federal government to do better.
           </p>
-        </section> --> <!-- beyondpolicy -->
+        </section> <!-- beyondpolicy -->
         <!-- <section id="about" class="content-section responsive-width">
         </section> --> <!-- about -->
-
 
         <section id="contact" class="content-section responsive-width">
             <h2>Get in touch</h2>
