--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
              <li>Solve the cost of living crisis while protecting and improving our quality of life, our environment, the beauty of our city and our suburbs, and our public services.</li>
              <li>Solve the algae crisis, and the pollution crises that are causing it.</li>
              <li>Solve the health care crisis, including the ramping crisis.</li>
-             <li>Solve the underemployment crisis. Ensure that every Australian is supported to make the best use of their skill, talent and knowledge.</li>
+             <li>Solve the underemployment crisis. Ensure that every Australian is supported to make the best use of their skills, talent and knowledge.</li>
              <li>Protect our children, women and men from harm, including from harmful advertising like gambling adverts, and from unfair treatment. Within the limits of our political system, I'll do what I can to protect all individuals from injustice.</li>
              <li>Fight for integrity in politics, transparency and accountability in government and a stronger democracy, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations.</li>
             </ul>
@@ -104,7 +104,7 @@
 <!--              <article>
              <h3>Solving the underemployment crisis</h3>
               <p>
-               The official (low hours) underemployment rate is 5.9%, but the real underemployment rate may be well over 20%. 5.9% is only the number of employed Australians who are working fewer hours than they would like to. It doesn't include the 4.5% of unemployed Australians who are seeking a job, which makes a total of more than 10% of Australians who are underemployed in terms of hours. Even this combined figure doesn't include all of the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skill and knowledge are not being put to best use, meaning that the true underemployment rate, in the broader sense, may be well over 20%.
+               The official (low hours) underemployment rate is 5.9%, and the real underemployment rate may be well over 20%. 5.9% is only the number of employed Australians who are working fewer hours than they would like to. It doesn't include the 4.5% of unemployed Australians who are seeking a job, which makes a total of more than 10% of Australians who are underemployed in terms of hours. Even this combined figure doesn't include all of the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skill and knowledge are not being put to best use, meaning that the true underemployment rate, in the broader sense, may be well over 20%.
               </p>
              </article> -->
         </section>
