--- a/policy.html
+++ b/policy.html
@@ -105,18 +105,60 @@
              <p>My policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
 
              <article>
+
               <h3>Solving the cost of living crisis</h3>
-              <h3>Solving the algae and pollution crisis</li>
+
+               <p>Policy details will be progressively published here and on other platforms like Facebook, Youtube and Instagram between now and the election in March next year.</p>
+               <p>My policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
+             </article>
+
+             <article>
+              <h3>Solving the algae and pollution crisis</h3>
+
+               <p>Policy details will be progressively published here and on other platforms like Facebook, Youtube and Instagram between now and the election in March next year.</p>
+               <p>My policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
+             </article>
+
+             <article>
+
               <h3>Solving the health care crisis</h3>
+
+               <p>Policy details will be progressively published here and on other platforms like Facebook, Youtube and Instagram between now and the election in March next year.</p>
+               <p>My policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
+             </article>
+
+             <article>
               <h3>Solving the underemployment crisis</h3>
+
+               <p>Policy details will be progressively published here and on other platforms like Facebook, Youtube and Instagram between now and the election in March next year.</p>
+               <p>My policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
+             </article>
+
+             <article>
               <h3>Solving the underemployment crisis</h3>
                <p>
-                The official (low hours) underemployment rate is 5.9%, and the real underemployment rate may be well over 20%. 5.9% is only the number of employed Australians who are working fewer hours than they would like to. It doesn't include the 4.5% of unemployed Australians who are seeking a job, which makes a total of more than 10% of Australians who are underemployed in terms of hours. Even this combined figure doesn't include all of the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skill and knowledge are not being put to best use, meaning that the true underemployment rate, in the broader sense, may be well over 20%.
+                The official (low hours) underemployment rate is 5.9%, and the real underemployment rate may be well over 20%. 5.9% is only the number of employed Australians who are working fewer hours than they would like to. It doesn't include the 4.5% of unemployed Australians who are seeking a job, which makes a total of more than 10% of Australians who would like more hours of work than they have. Even this combined figure doesn't include all of the 20% of Australians who are not fully using their qualifications, not to mention the unknown number of Australians whose skill and knowledge are not being put to best use, meaning that the true underemployment rate, in the broader sense, may be well over 20%.
                </p>
-              <h3>Solving the corruption crisis</h3>
-              <h3>Protecting our children, women and men</h3>x
-             <article>
+
+               <p>Policy details will be progressively published here and on other platforms like Facebook, Youtube and Instagram between now and the election in March next year.</p>
+               <p>My policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p> 
              </article>
+
+             <article>
+
+              <h3>Solving the corruption crisis</h3>
+
+               <p>Policy details will be progressively published here and on other platforms like Facebook, Youtube and Instagram between now and the election in March next year.</p>
+               <p>My policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
+             </article>
+
+             <article>
+              <h3>Protecting our children, women and men</h3>
+
+               <p>Policy details will be progressively published here and on other platforms like Facebook, Youtube and Instagram between now and the election in March next year.</p>
+               <p>My policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
+             </article>
+
         </section>
         <section id="beyondpolicy" class="content-section responsive-width">
          <h2>Beyond policy</h2>
