--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
- <meta charset="UTF-8">
- <meta name="author" content="Alec Gargett">
- <meta name="robots" content="index, follow">
- <meta name="description" content="Alec Gargett is an Independent candidate for the seat of Waite in South Australia, focused on fair policy and community-driven solutions.">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
- <link rel="preconnect" href="https://fonts.googleapis.com">
- <link rel="preconnect" href="https://fonts.gstatic" crossorigin>
- <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
- 
- <link rel="icon" href="images/alec_gargett_adelaide_oval_torrens_river_202303.jpg" type="image/x-icon">
- 
- <meta property="og:title" content="Alec Gargett | Independent for Waite">
- <meta property="og:description" content="A fresh voice for our community, committed to real solutions.">
- <meta property="og:image" content="images/alec_gargett_adelaide_oval_torrens_river_202303.jpg">
- <meta property="og:url" content="https://alecgargett.space">
- <meta property="og:type" content="website">
- 
- <title>Alec Gargett | Independent for Waite</title>
+<meta charset="UTF-8">
+<meta name="author" content="Alec Gargett">
+<meta name="robots" content="index, follow">
+<meta name="description" content="Alec Gargett is an Independent candidate for the seat of Waite in South Australia, focused on fair policy and community-driven solutions.">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+
+<link rel="icon" href="https://alecgargett.github.io/waite/images/alec_gargett_adelaide_oval_torrens_river_202303.png" type="image/png">
+
+<!-- Canonical & Primary Metadata -->
+<link rel="canonical" href="https://alecgargett.github.io/waite/">
+<meta property="og:url" content="https://alecgargett.github.io/waite/">
+<meta name="theme-color" content="#0A192F">
+
+<!-- Open Graph (Facebook, LinkedIn, etc.) -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Alec Gargett | Independent for Waite">
+<meta property="og:description" content="Alec Gargett is an Independent candidate for Waite, focused on fair policy and community-driven solutions.">
+<meta property="og:image" content="https://alecgargett.github.io/waite/images/alec_gargett_adelaide_oval_torrens_river_202303.jpg">
+<meta property="og:site_name" content="Alec Gargett">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Alec Gargett | Independent for Waite">
+<meta name="twitter:description" content="Alec Gargett is an Independent candidate for Waite, focused on fair policy and community-driven solutions.">
+<meta name="twitter:image" content="https://alecgargett.github.io/waite/images/alec_gargett_adelaide_oval_torrens_river_202303.jpg">
+<meta name="twitter:url" content="https://alecgargett.github.io/waite/">
+
+<title>Alec Gargett | Independent for Waite</title>
 </head>
  
 <body onload="applySavedTheme()">
-
 <div class="site-container">
     <header class="site-header">
         <div class="header-content responsive-width">
@@ -52,7 +65,7 @@
                         <svg viewBox="0 0 24 24" role="img" aria-hidden="true"><path d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"/></svg>
                     </a>
                     <a href="https://www.instagram.com/alecgargett/" target="_blank" rel="noopener noreferrer" aria-label="Follow Alec on Instagram">
-                        <svg viewBox="0 0 24 24" role="img" aria-hidden="true"><path d="M12 2c-2.72 0-3.05.01-4.12.06-1.06.05-1.79.22-2.42.47-.65.25-1.23.59-1.77 1.14-.54.54-.89 1.12-1.14 1.77-.25.63-.42 1.36-.47 2.42C2.01 8.95 2 9.28 2 12s.01 3.05.06 4.12c.05 1.06.22 1.79.47 2.42.25.65.59 1.23 1.14 1.77.54.54 1.12.89 1.77 1.14.63.25 1.36.42 2.42.47 1.07.05 1.4.06 4.12.06s3.05-.01 4.12-.06c1.06-.05 1.79-.22 2.42-.47.65-.25 1.23-.59 1.77-1.14.54-.54.89-1.12 1.14-1.77.25-.63.42-1.36.47-2.42.05-1.07.06-1.4.06-4.12s-.01-3.05-.06-4.12c-.05-1.06-.22-1.79-.47-2.42-.25-.65-.59-1.23-1.14-1.77-.54-.54-1.12-.89-1.77-1.14-.63-.25-1.36-.42-2.42-.47C15.05 2.01 14.72 2 12 2zm0 1.8c2.67 0 2.98.01 4.04.06 1.02.05 1.58.21 1.9.36.43.19.74.42 1.05.73.31.31.54.62.73 1.05.15.32.31.88.36 1.9.05 1.06.06 1.37.06 4.04s-.01 2.98-.06 4.04c-.05 1.02-.21 1.58-.36 1.9-.19.43-.42.74-.73 1.05-.31.31-.62.54-1.05.73-.32.15-.88.31-1.9.36-1.06.05-1.37.06-4.04.06s-2.98-.01-4.04-.06c-1.02-.05-1.58-.21-1.9-.36-.43-.19-.74-.42-1.05-.73-.31-.31-.54-.62-.73-1.05-.15-.32-.31-.88-.36-1.9-.05-1.06-.06-1.37-.06-4.04s.01-2.98.06-4.04c.05-1.02.21-1.58.36-1.9.19-.43.42-.74.73 1.05.31-.31.62-.54 1.05-.73.32-.15.88.31 1.9-.36C9.02 3.81 9.33 3.8 12 3.8zm0 3.3c-2.61 0-4.72 2.11-4.72 4.72S9.39 16.54 12 16.54s4.72-2.11 4.72-4.72S14.61 7.1 12 7.1zm0 7.64c-1.62 0-2.92-1.3-2.92-2.92s1.3-2.92 2.92-2.92 2.92 1.3 2.92 2.92-1.3 2.92-2.92 2.92zm4.33-7.82c-.6 0-1.08.48-1.08 1.08s.48 1.08 1.08 1.08 1.08-.48 1.08-1.08-.48-1.08-1.08-1.08z"/></svg>
+                        <svg viewBox="0 0 24 24" role="img" aria-hidden="true"><path d="M12 2c-2.72 0-3.05.01-4.12.06-1.06.05-1.79.22-2.42.47-.65.25-1.23.59-1.77 1.14-.54.54-.89 1.12-1.14 1.77-.25.63-.42 1.36-.47 2.42C2.01 8.95 2 9.28 2 12s.01 3.05.06 4.12c.05 1.06.22 1.79.47 2.42.25.65.59 1.23 1.14 1.77.54.54 1.12.89 1.77 1.14.63.25 1.36.42 2.42.47 1.07.05 1.4.06 4.12.06s3.05-.01 4.12-.06c1.06-.05 1.79-.22 2.42-.47.65-.25 1.23-.59 1.77-1.14.54-.54.89-1.12 1.14-1.77.25-.63.42-1.36.47-2.42.05-1.07.06-1.4.06-4.12s-.01-3.05-.06-4.12c-.05-1.06-.22-1.79-.47-2.42-.25-.65-.59-1.23-1.14-1.77-.54-.54-1.12-.89-1.77-1.14-.63-.25-1.36-.42-2.42-.47C15.05 2.01 14.72 2 12 2zm0 1.8c2.67 0 2.98.01 4.04.06 1.02.05 1.58.21 1.9.36.43.19.74.42 1.05.73.31.31.54.62.73 1.05.15.32.31.88.36 1.9.05 1.06.06 1.37.06 4.04s-.01 2.98-.06 4.04c-.05 1.02-.21 1.58-.36 1.9-.19.43-.42.74-.73 1.05-.31.31-.62.54-1.05.73-.32.15-.88.31-1.9.36-1.06.05-1.37.06-4.04.06s-2.98-.01-4.04-.06c-1.02-.05-1.58-.21-1.9-.36-.43-.19-.74-.42-1.05-.73-.31-.31-.54-.62-.73-1.05-.15-.32-.31-.88-.36-1.9-.05-1.06-.06-1.37-.06-4.04s.01-2.98.06-4.04c.05-1.02.21-1.58.36-1.9.19-.43.42-.74.73 1.05.31-.31.62-.54 1.05-.73.32-.15.88-.31 1.9-.36C9.02 3.81 9.33 3.8 12 3.8zm0 3.3c-2.61 0-4.72 2.11-4.72 4.72S9.39 16.54 12 16.54s4.72-2.11 4.72-4.72S14.61 7.1 12 7.1zm0 7.64c-1.62 0-2.92-1.3-2.92-2.92s1.3-2.92 2.92-2.92 2.92 1.3 2.92 2.92-1.3 2.92-2.92 2.92zm4.33-7.82c-.6 0-1.08.48-1.08 1.08s.48 1.08 1.08 1.08 1.08-.48 1.08-1.08-.48-1.08-1.08-1.08z"/></svg>
                     </a>
                     <a href="https://www.tiktok.com/@alecgargett" target="_blank" rel="noopener noreferrer" aria-label="Follow Alec on TikTok">
                         <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
@@ -105,7 +118,6 @@
              <p>My policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
 
              <article>
-
               <h3>Solving the cost of living crisis</h3>
 
                <p>Policy details will be progressively published here and on other platforms like Facebook, Youtube and Instagram between now and the election in March next year.</p>
@@ -120,7 +132,6 @@
              </article>
 
              <article>
-
               <h3>Solving the health care crisis</h3>
 
                <p>Policy details will be progressively published here and on other platforms like Facebook, Youtube and Instagram between now and the election in March next year.</p>
@@ -138,7 +149,6 @@
              </article>
 
              <article>
-
               <h3>Solving the corruption crisis</h3>
 
                <p>Policy details will be progressively published here and on other platforms like Facebook, Youtube and Instagram between now and the election in March next year.</p>
@@ -174,7 +184,7 @@
                         <svg viewBox="0 0 24 24" role="img" aria-hidden="true"><path d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"/></svg>
                     </a>
                     <a href="https://www.instagram.com/alecgargett/" target="_blank" rel="noopener noreferrer" aria-label="Follow Alec on Instagram">
-                        <svg viewBox="0 0 24 24" role="img" aria-hidden="true"><path d="M12 2c-2.72 0-3.05.01-4.12.06-1.06.05-1.79.22-2.42.47-.65.25-1.23.59-1.77 1.14-.54.54-.89 1.12-1.14 1.77-.25.63-.42 1.36-.47 2.42C2.01 8.95 2 9.28 2 12s.01 3.05.06 4.12c.05 1.06.22 1.79.47 2.42.25.65.59 1.23 1.14 1.77.54.54 1.12.89 1.77 1.14.63.25 1.36.42 2.42.47 1.07.05 1.4.06 4.12.06s3.05-.01 4.12-.06c1.06-.05 1.79-.22 2.42-.47.65-.25 1.23-.59 1.77-1.14.54-.54.89-1.12 1.14-1.77.25-.63.42-1.36.47-2.42.05-1.07.06-1.4.06-4.12s-.01-3.05-.06-4.12c-.05-1.06-.22-1.79-.47-2.42-.25-.65-.59-1.23-1.14-1.77-.54-.54-1.12-.89-1.77-1.14-.63-.25-1.36-.42-2.42-.47C15.05 2.01 14.72 2 12 2zm0 1.8c2.67 0 2.98.01 4.04.06 1.02.05 1.58.21 1.9.36.43.19.74.42 1.05.73.31.31.54.62.73 1.05.15.32.31.88.36 1.9.05 1.06.06 1.37.06 4.04s-.01 2.98-.06 4.04c-.05 1.02-.21 1.58-.36 1.9-.19.43-.42.74-.73 1.05-.31.31-.62.54-1.05.73-.32.15-.88.31-1.9.36-1.06.05-1.37.06-4.04.06s-2.98-.01-4.04-.06c-1.02-.05-1.58-.21-1.9-.36-.43-.19-.74-.42-1.05-.73-.31-.31-.54-.62-.73-1.05-.15-.32-.31-.88-.36-1.9-.05-1.06-.06-1.37-.06-4.04s.01-2.98.06-4.04c.05-1.02.21-1.58.36-1.9.19-.43.42-.74.73 1.05.31-.31.62-.54 1.05-.73.32-.15.88.31 1.9-.36C9.02 3.81 9.33 3.8 12 3.8zm0 3.3c-2.61 0-4.72 2.11-4.72 4.72S9.39 16.54 12 16.54s4.72-2.11 4.72-4.72S14.61 7.1 12 7.1zm0 7.64c-1.62 0-2.92-1.3-2.92-2.92s1.3-2.92 2.92-2.92 2.92 1.3 2.92 2.92-1.3 2.92-2.92 2.92zm4.33-7.82c-.6 0-1.08.48-1.08 1.08s.48 1.08 1.08 1.08 1.08-.48 1.08-1.08-.48-1.08-1.08-1.08z"/></svg>
+                        <svg viewBox="0 0 24 24" role="img" aria-hidden="true"><path d="M12 2c-2.72 0-3.05.01-4.12.06-1.06.05-1.79.22-2.42.47-.65.25-1.23.59-1.77 1.14-.54.54-.89 1.12-1.14 1.77-.25.63-.42 1.36-.47 2.42C2.01 8.95 2 9.28 2 12s.01 3.05.06 4.12c.05 1.06.22 1.79.47 2.42.25.65.59 1.23 1.14 1.77.54.54 1.12.89 1.77 1.14.63.25 1.36.42 2.42.47 1.07.05 1.4.06 4.12.06s3.05-.01 4.12-.06c1.06-.05 1.79-.22 2.42-.47.65-.25 1.23-.59 1.77-1.14.54-.54.89-1.12 1.14-1.77.25-.63.42-1.36.47-2.42.05-1.07.06-1.4.06-4.12s-.01-3.05-.06-4.12c-.05-1.06-.22-1.79-.47-2.42-.25-.65-.59-1.23-1.14-1.77-.54-.54-1.12-.89-1.77-1.14-.63-.25-1.36-.42-2.42-.47C15.05 2.01 14.72 2 12 2zm0 1.8c2.67 0 2.98.01 4.04.06 1.02.05 1.58.21 1.9.36.43.19.74.42 1.05.73.31.31.54.62.73 1.05.15.32.31.88.36 1.9.05 1.06.06 1.37.06 4.04s-.01 2.98-.06 4.04c-.05 1.02-.21 1.58-.36 1.9-.19.43-.42.74-.73 1.05-.31.31-.62.54-1.05.73-.32.15-.88.31-1.9.36-1.06.05-1.37.06-4.04.06s-2.98-.01-4.04-.06c-1.02-.05-1.58-.21-1.9-.36-.43-.19-.74-.42-1.05-.73-.31-.31-.54-.62-.73-1.05-.15-.32-.31-.88-.36-1.9-.05-1.06-.06-1.37-.06-4.04s.01-2.98.06-4.04c.05-1.02.21-1.58.36-1.9.19-.43.42-.74.73 1.05.31-.31.62-.54 1.05-.73.32-.15.88-.31 1.9-.36C9.02 3.81 9.33 3.8 12 3.8zm0 3.3c-2.61 0-4.72 2.11-4.72 4.72S9.39 16.54 12 16.54s4.72-2.11 4.72-4.72S14.61 7.1 12 7.1zm0 7.64c-1.62 0-2.92-1.3-2.92-2.92s1.3-2.92 2.92-2.92 2.92 1.3 2.92 2.92-1.3 2.92-2.92 2.92zm4.33-7.82c-.6 0-1.08.48-1.08 1.08s.48 1.08 1.08 1.08 1.08-.48 1.08-1.08-.48-1.08-1.08-1.08z"/></svg>
                     </a>
                     <a href="https://www.tiktok.com/@alecgargett" target="_blank" rel="noopener noreferrer" aria-label="Follow Alec on TikTok">
                         <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
@@ -198,11 +208,9 @@
         </div>
     </footer>
 </div>
-
 </body>
 
 <tail style="display:none">
-
 <script id="theme-switcher">
 function applySavedTheme() {
     const savedTheme = localStorage.getItem('theme');
@@ -258,7 +266,6 @@ body.dark-theme {
     --color-text-muted: var(--color-text-muted-dark);
     
     background: linear-gradient(to right, var(--color-gradient-blue-dark), #000000, var(--color-gradient-blue-dark));
-    background-attachment: fixed;
 }
 
 html {
@@ -536,6 +543,6 @@ body.dark-theme .site-footer a {
 </style>
      
 <script defer src="https://cdn.counter.dev/script.js" data-id="9cb95797-dd6c-4b86-ab11-90a4e37567d3" data-utcoffset="11"></script>
-
 </tail>
+
 </html>
