--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
              <li>Solve the underemployment crisis. Ensure that every Australian is supported to make the best use of their skills, talent and knowledge.</li>
              <li>Solve the corruption crisis. Deliver integrity in politics, transparency and accountability in government and a stronger democracy, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations.</li>
              <li>Solve the police staffing crisis.</li>
-             <li>Protect our children, women and men from harm, including from harmful advertising like gambling adverts, and from unfair treatment. Within the limits of our political system, I'll do what I can to protect everyone from injustice.</li>
+             <li>Protect our children, women and men from unfair treatment and harm, including from advertising like gambling adverts. Within the limits of our political system, I'll do what I can to protect everyone from injustice.</li>
             </ul>
             <p>Big claims? Yes. But at least I have a plan. At least I'm going to try.</p>
             <p>Sometimes it seems like most of our politicians and political parties aren't even trying. They prefer to play around the edges of our problems; throw a lot of money at problems without solving their causes; or choose policies that mitigate some problems while making other problems worse. Sometimes they choose a hopeless political strategy to boot, and for almost all political parties it's a divisive strategy.</p>
