--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <link rel="icon" href="https://alecgargett.github.io/waite/images/alec_gargett_adelaide_oval_torrens_river_202303.png" type="image/png">
 
+<link rel="preload" as="image" href="images/alec_gargett_adelaide_oval_torrens_river_202303_smile_cropped.jpg">
+
 <!-- Canonical & Primary Metadata -->
 <link rel="canonical" href="https://alecgargett.github.io/waite/">
 <meta property="og:url" content="https://alecgargett.github.io/waite/">
