--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@ body.light-theme .site-header {
 }
 
 .intro-content-box {
-    background-color: var(--color-background)
+    background-color: var(--color-background);
     background-image: url('images/alec_gargett_adelaide_oval_torrens_river_202303_cropped.jpg');
     background-size: cover;
     background-position: right 25%;
