--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                     </a>
                 </div>
               
-              <p>Additional policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself to:</p>
+              <p>Additional policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself. If you're interested in a face to face meeting or a phonecall, please email me about that too.</p>
 
             <p class="contact-email">
                 <strong>Email:</strong> <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>
