--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@
 
              <h3>9. Maintain refugee intake but reduce net immigration</h3>
 
+             <p>During Covid, rents became cheaper, and when businesses opened back up again, but borders were still shut, unemployment dropped to the lowest rate in 50 years. And this is only the short term effects. In the long term, the quality of housing we are living in will continue to get worse if the population density in our cities continues to grow at millions per decade, the rate that corporations and their political parties have chosen.</p>
+
              <p>Policy 8 above will reduce reliance on skilled immigration and negate the need for bringing so many skilled visa holders into South Australia by training underemployed and undertrained Australians and providing more paid work experience opportunities. We can address almost all of our real skills shortages locally, not only through tertiary education, but also through government-supported and business-supported apprenticeships, other on-the-job training, and other paid work experience opportunities, for people who are already here, rather than bringing additional people in from interstate and overseas to compensate for our lack of proper training systems and job experience opportunities.</p>
 
              <h3>10. Increase the number of hospitals, emergency departments and staff. Reopen the Blackwood Hospital and the Repat emergency department</h3>
