--- a/indexwithpolicy.html
+++ b/indexwithpolicy.html
@@ -14,6 +14,8 @@
 
 <link rel="icon" href="https://alecgargett.github.io/waite/images/alec_gargett_adelaide_oval_torrens_river_202303.png" type="image/png">
 
+<link rel="preload" as="image" href="images/alec_gargett_adelaide_oval_torrens_river_202303_smile_cropped.jpg">
+
 <!-- Canonical & Primary Metadata -->
 <link rel="canonical" href="https://alecgargett.github.io/waite/">
 <meta property="og:url" content="https://alecgargett.github.io/waite/">
@@ -184,6 +186,8 @@
 
              <h3>9. Maintain refugee intake but reduce net immigration</h3>
 
+             <p>During Covid, rents became cheaper, and when businesses opened back up again, but borders were still shut, unemployment dropped to the lowest rate in 50 years. And this is only the short term effects. In the long term, the quality of housing we are living in will continue to get worse if the population density in our cities continues to grow at millions per decade, the rate that corporations and their political parties have chosen.</p>
+
              <p>Policy 8 above will reduce reliance on skilled immigration and negate the need for bringing so many skilled visa holders into South Australia by training underemployed and undertrained Australians and providing more paid work experience opportunities. We can address almost all of our real skills shortages locally, not only through tertiary education, but also through government-supported and business-supported apprenticeships, other on-the-job training, and other paid work experience opportunities, for people who are already here, rather than bringing additional people in from interstate and overseas to compensate for our lack of proper training systems and job experience opportunities.</p>
 
              <h3>10. Increase the number of hospitals, emergency departments and staff. Reopen the Blackwood Hospital and the Repat emergency department</h3>
@@ -278,6 +282,7 @@
               <p>
                In 2024, over 30% of Computing and Information Systems university graduates reported that they did not have full-time employment 4 to 6 months after graduating, and of those with full-time employment, an additional 28% reported that they were not fully utilising their skills and education, meaning only about 50% were working full-time in an area that fully utilised their skills. Even within Engineering, 15% of graduates did not have full-time employment and an additional 23% reported they were not fully utilising their skills and education. For all degrees combined, 26% of graduates were not in full-time employment and an additional 28% of full-time employed graduates reported that they were not fully utilising their skills and knowledge. Many graduates are rejected from relevant jobs because employers prefer to bring people in from overseas with a more impressive CV. The federal Labor government plans to bring 1 million more people in on visas over the next 4 years, leading to an increase in the population of 1.4 million, about the size of the entire city of Adelaide. This has benefits, especially for property developers, immigration lawyers, and large corporations that work to keep their profits high by keeping salaries low and their training costs low, but Australians have been gaslighted by politicians and some of their followers on the downsides of this for everyone else, which only adds to the misguided hatred such as racism that they claim to oppose. We are told by politicians that several million more people per decade is necessary to address skills shortages and has negligible downsides, but there are over two million underemployed or unemployed Australians that can be trained to solve almost all of our real skills shortages, and who desperately need that extra income, many of whom already have the necessary education. 
               </p>
+              <p>For a deeper discussion of the related underpayment crisis, and my creative writing, see <a href="https://alecgargett.github.io/alecgargett-space">my old artist website<a>.</p>
              </article>
              <article>
               <h3>More details on the immigration policies of the major parties</h3>
@@ -326,7 +331,7 @@
                     </a>
                 </div>
               
-              <p>Additional policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself to:</p>
+              <p>Additional policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself. If you're interested in a face to face meeting or a phonecall, please email me about that too.</p>
 
             <p class="contact-email">
                 <strong>Email:</strong> <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>
@@ -552,6 +557,7 @@ body.light-theme .site-header {
 }
 
 .intro-content-box {
+    background-color: var(--color-background);
     background-image: url('images/alec_gargett_adelaide_oval_torrens_river_202303_cropped.jpg');
     background-size: cover;
     background-position: right 25%;
