--- a/indexwithpolicy.html
+++ b/indexwithpolicy.html
@@ -168,9 +168,9 @@
                <li>Secondly, due to policies 2 and 3, explained above, the Quality of Life Commission would adjust charges on property investors by whatever amount needed to compensate, keeping average prices at or below the target housing price limit. As part of this, a wealthy residential landlord selling to anyone other than the rightful buyer granted the HECS loan would be charged a fee for doing so, incentivising them to sell to the rightful buyer at the target market price.</li>
               </ul>
 
-             <h3>5. Stop giving our resource wealth away for free</h3>
+             <h3>5. Stop giving our resource wealth away (almost) for free</h3>
 
-             <p>Natural resources under the ground legally belong to the state, which means they belong to all South Australians. Giving away these resources to large corporations for free is one of the biggest rorts in our history. The Quality of Life Commission will charge whatever rate maximises benefits for South Australians, which will fund measures to reduce the cost of living, detailed below.</p>
+             <p>Natural resources under the ground legally belong to the state, which means they belong to all South Australians. Giving away these resources to large corporations for pennies is one of the biggest rorts in our history. The Quality of Life Commission will charge whatever rate maximises benefits for South Australians, which will fund measures to reduce the cost of living, detailed below.</p>
 
              <h3>6. Cut prices on other essentials</h3>
 
