--- a/indexwithpolicy.html
+++ b/indexwithpolicy.html
@@ -733,4 +733,4 @@ body.light-theme .site-footer a {
      
 <script defer src="https://cdn.counter.dev/script.js" data-id="9cb95797-dd6c-4b86-ab11-90a4e37567d3" data-utcoffset="11"></script>
 </tail>
-</html>``
+</html>
