--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
               <h3>14. Reduce traffic congestion and pollution</h3>
 
-              <p>Reduce traffic congestion and pollution with much higher quality public transport. Increase the frequency of bus services with a new electric or plug-in hybrid bus fleet. Make every second bus free. Introduce more bus lanes to bypass traffic.</p>
+              <p>Reduce traffic congestion and pollution with much higher quality public transport and policies that reduce commuting at rush hour. Increase the frequency of bus services with a new electric or plug-in hybrid bus fleet. Make every second bus free. Introduce more bus lanes to bypass traffic.</p>
 
               <h3>15. Improve the Belair train line</h3>
 
