--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
              <h3>1. Quality of Life Commission</h3>
 
-             <p>Solve the cost of living crisis and the quality of life crisis, by creating a Cost of Living and Quality of Life Commission, which I will refer to here simply as the Quality of Life Commission. The Quality of Life Commission will be given the power to regulate against the causes of the quality of life crisis, within limits set by parliament.</p>
+             <p>Solve the cost of living crisis and the quality of life crisis, by creating a Cost of Living and Quality of Life Commission, which I will refer to here simply as the Quality of Life Commission. Give the Quality of Life Commission the power to regulate against the causes of the quality of life crisis, within limits set by parliament.</p>
 
              <h3>2. Housing price growth limit</h3>
 
@@ -208,7 +208,7 @@
 
              <h3>11. Build housing the right way</h3>
 
-             <p>The above policies may be enough to solve the housing affordability crisis, but we also need to improve the quality of housing that people can afford by building the right type of high-quality housing in the right locations, instead of destroying the beauty of our existing suburbs and wasting land on the outskirts with a lack of proper planning. With all of the above policies, we won't need to sacrifice our quality of life to reduce the cost of living anymore. We can replace ugly buildings with beautiful ones, instead of replacing beautiful buildings and gardens with ugly ones, and we can plan new land releases better to use the land more efficiently with higher quality housing with a wide variety of densities, along with adequate space for new hospitals and other necessary amenities and infrastructure.</p>
+             <p>The above policies may be enough to solve the housing affordability crisis, but we also need to improve the quality of housing that people can afford by building the right type of high-quality housing in the right locations, instead of destroying the beauty of our existing suburbs and wasting land on the outskirts with a lack of proper planning. With all of the above policies, we won't need to sacrifice our quality of life to reduce the cost of living any longer. We can replace ugly buildings with beautiful ones, instead of replacing beautiful buildings and gardens with ugly ones, and we can plan new land releases better to use the land more efficiently with higher quality housing with a wide variety of densities, along with adequate space for new hospitals and other necessary amenities and infrastructure.</p>
 
               <h3>12. Solve the police staffing crisis</h3>
 
@@ -220,7 +220,7 @@
 
               <h3>14. Reduce traffic congestion and pollution</h3>
 
-              <p>Reduce traffic congestion and pollution with much higher quality public transport and workplace policies that reduce commuting at rush hour. Increase the frequency of bus services with a new electric or plug-in hybrid bus fleet. Make every second bus free. Introduce more bus lanes to bypass traffic.</p>
+              <p>Reduce traffic congestion and pollution with much higher quality public transport and workplace policies that reduce commuting at rush hour. Increase the frequency of bus services with a new electric or plug-in hybrid bus fleet. Make every second bus on each route free. Introduce more bus lanes to bypass traffic.</p>
 
               <h3>15. Improve the Belair train line</h3>
 
