--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
 
              <p>Although immigration policy is primarily a federal government matter, it is important for me to have policies on this at the state level, since it sends a message to the federal government. Meanwhile, if implemented, Policy 8 would reduce the demand for skilled workers to move to South Australia, reduce the need for state-sposored skilled visas, and reduce the demand for the federal government to hand out other skilled visas.</p>
 
+             <p>The Albanese government's current plan is net immigration of 230 000 per year, a rate of 2.3 million people per decade. The opposition's plan is to reduce this to a net intake of 130 000 per year, a rate of 1.3 million per decade. Neither has a comprehensive plan like my plan above to end our reliance on high rates of worker immigration.
+             </p>
+
              <h3>10. Increase the number of hospitals, emergency departments and staff. Reopen the Blackwood Hospital and the Repat emergency department</h3>
 
              <p>Increase not only the size of emergency departments and hospitals, but also the number of them, the number of staff, and the number, quality and affordability of aged care centres. We can:</p>
@@ -285,12 +288,6 @@
                In 2024, over 30% of Computing and Information Systems university graduates reported that they did not have full-time employment 4 to 6 months after graduating, and of those with full-time employment, an additional 28% reported that they were not fully utilising their skills and education, meaning only about 50% were working full-time in an area that fully utilised their skills. Even within Engineering, 15% of graduates did not have full-time employment and an additional 23% reported they were not fully utilising their skills and education. For all degrees combined, 26% of graduates were not in full-time employment and an additional 28% of full-time employed graduates reported that they were not fully utilising their skills and knowledge. Many graduates are rejected from relevant jobs because employers prefer to bring people in from overseas with a more impressive CV. The federal Labor government plans to bring 1 million more people in on visas over the next 4 years, leading to an increase in the population of 1.4 million, about the size of the entire city of Adelaide. This has benefits, especially for property developers, immigration lawyers, and large corporations that work to keep their profits high by keeping salaries low and their training costs low, but Australians have been gaslit by politicians and some of their followers on the downsides of this for everyone else, which only adds to the misguided hatred such as racism that they claim to oppose. We are told by politicians that several million more people per decade is necessary to address skills shortages and has negligible downsides, but there are over two million underemployed or unemployed Australians that can be trained to solve almost all of our real skills shortages, and who desperately need that extra income, many of whom already have the necessary education. 
               </p>
               <p>For a deeper discussion of the related underpayment crisis, and my creative writing, see <a href="https://alecgargett.github.io/alecgargett-space">my old artist website</a>.</p>
-             </article>
-             <article>
-              <h3>More details on the immigration policies of the major parties</h3>
-              <p>
-              The Albanese government's current plan is net immigration of 230 000 per year, a rate of 2.3 million people per decade. The opposition's plan is to reduce this to a net intake of 130 000 per year, a rate of 1.3 million per decade. Neither has a comprehensive plan like my plan above to end our reliance on high rates of skilled worker immigration.
-              </p>
              </article>
              <article>
               <h3>The harder problem of global injustice and violence.</h3>
