--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
               <h3>14. Reduce traffic congestion and pollution</h3>
 
-              <p>Reduce traffic congestion and pollution with much higher frequency and higher quality public transport and workplace policies that reduce commuting at rush hour. Increase the frequency of bus services with a new electric or plug-in hybrid bus fleet. Make every second bus on each route free. Introduce more bus lanes to bypass traffic. A higher frequency of public transport services will not only reduce traffic congestion, but also reduce overcrowding on the buses, trains and trams themselves.</p>
+              <p>Reduce traffic congestion and pollution with much higher frequency and higher quality public transport and workplace policies that reduce commuting at rush hour. Increase the frequency of bus services wi`th a new electric or plug-in hybrid bus fleet. Make every second bus on each route free. Introduce more bus lanes to bypass traffic. A higher frequency of public transport services will not only reduce traffic congestion, but also reduce overcrowding on the buses, trains and trams themselves.</p>
 
               <h3>15. Improve the Belair train line</h3>
 
